<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.urbancortex.presenter.presentation"
    android:gravity="top">

    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stimulus"
        android:src="@drawable/ic_placeholder"
        android:layout_gravity="top" />


    <TextView android:text="@string/hello_world"  android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView android:text="@string/hello_world"  android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:layout_weight="0.57"
        android:layout_gravity="bottom">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_left"
            android:id="@+id/present_button1"
            android:layout_weight="1"
            android:onClick="onButtonClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_middle"
            android:id="@+id/present_button2"
            android:layout_weight="1"
            android:onClick="onButtonClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_right"
            android:id="@+id/present_button3"
            android:layout_weight="1"
            android:onClick="onButtonClick" />
    </LinearLayout>


</LinearLayout>
