<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.urbancortex.presenter.WalkingToDestination">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/screenText"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            />

        <ImageView
            android:id="@+id/destination"
            android:contentDescription="@string/stimulus"
            android:src="@drawable/ic_fixation_cross"
            android:layout_gravity="top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:visibility="invisible"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_weight="2"
            >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/startWalkingBtn"
                android:id="@+id/startWalking"
                android:onClick="onTestingClick"
                android:translationZ="-1dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:background="#ff04ffbd"
                android:layout_margin="5dp"
                android:visibility="invisible"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/arrivedBtn"
                android:id="@+id/arrived"
                android:onClick="onTestingClick"

                android:layout_gravity="bottom|end"
                android:layout_weight="1"
                android:background="#ffff9500"
                android:layout_margin="5dp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
